# emilybot

./: .dprint.jsonc  .env.ci.yaml  .env.yaml  .gitignore  .sops.yaml  .tool-versions  CHANGELOG.md  CLAUDE.md  NIXPACKS_UV_RESEARCH.md  README.md  TODO.md  config.toml  debug_test.py  deno.jsonc  main.py  mise.ci.toml  mise.toml  nixpacks.toml  pyproject.toml  task.md  test_entry_display.py  test_js_code_parsing.py  test_js_executor.py  test_set_command.py
.claude/hooks/: session-start.sh
.github/workflows/: auto-format.yml  ci.yml
.kiro/hooks/: run-fix-tests.kiro.hook
.kiro/specs/bot-execution-environment/: design.md  (+2 more)
.kiro/steering/: javascript.md  python.md  terminal.md
docs/: JS-examples.md  JavaScript-API.md  README.md
js-executor/: cli.ts  context.ts  deno.json  deno.jsonc  executor.ts  fetch.ts  imports.ts  lib.ts  logging.ts  main.ts  parse.test.ts  parse.ts  runner.ts  types.ts
src/emilybot/: command_query_service.py  conftest.py  database.py  db.py  discord.py  format.py  javascript_executor.py  main.py  parser.py  remember_cog.py  validation.py
tasks/: deprecations.md  dollar.md  esmsh.md  help.md  imports.md  underscore-accessors.md
tests/: conftest.py  test_command_access.py  test_command_query_service.py  test_dollar_prefix.py  test_dollar_whitespace_integration.py  test_entry_display.py  test_js_code_parsing.py  test_js_executor.py  test_js_executor_errors.py  test_parser.py  test_run_command.py  test_set_command.py  test_utility_lib.py  test_utility_lib_requirements.py
typings/typed_json_db/: __init__.pyi  database.pyi  exceptions.pyi
(+57 files in other folders)
