[project]
name = "emilybot"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "discord-py>=2.5.2",
  "inflect>=7.5.0",
  "typed-json-db>=0.2.2",
  "watchfiles>=1.1.0",
]

[project.scripts]
emilybot = "emilybot.main:main"

[dependency-groups]
dev = [
  "pyright>=1.1.403",
  "pytest>=8.0.0",
  "pytest-timeout>=2.4.0",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.pyright]
typeCheckingMode = "strict"
include = [".", "src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
timeout = 3
asyncio_mode = "auto"
addopts = [
  "--import-mode=importlib",
  "--doctest-modules",
]

[tool.ruff]
line-length = 88
indent-width = 4
exclude = ["typings/"]

[tool.ruff.lint]
ignore = ["E402", "F541"]
select = ["TID252"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
